<resources>
    <string name="app_name">Fooderie</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="logo">logo</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="signup_req"><u>Don\'t have an account? Sign up now</u></string>
    <string name="preference_file_name">Fooderie Preferences</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>

    <string name="name_validation">Min. 3 characters</string>
    <string name="country_code">+91</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_validation">Min. 4 characters</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Registration</string>
    <string name="navigation_drawer">Fooderie</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faq">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="rupee">\u20B9</string>
    <string name="cost_per_person">300 / person</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort">Sort</string>
    <string name="choose_food">Choose from menu listed below:</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="serial_number">1</string>
    <string name="dish_name">Dish Name</string>
    <string name="remove">Remove</string>
    <string name="ratings">4.7</string>
    <string name="add">Add</string>
    <string name="text_logo">-</string>
    <string name="ordering_from">Ordering From :</string>
    <string name="place_order">Place Order</string>
    <string name="no_fav">You do not have any Favourite Restaurants</string>
    <string name="forgot_password_instruct">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="otp_request">Enter the recieved OTP below</string>
    <string name="otp">OTP</string>
    <string name="submit">Submit</string>
    <string name="order_placed">Your Order has been successfully placed!!</string>
    <string name="previous_orders">Your previous orders are listed below:</string>
    <string name="no_order">You have not placed any order yet</string>
    <string name="search">search</string>
</resources>