<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/miHome"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            />
        <item
            android:id="@+id/miProfile"
            android:title="@string/profile"
            android:icon="@drawable/ic_account_circle"
            />
        <item
            android:id="@+id/miFavourite"
            android:title="@string/favorite_restaurants"
            android:icon="@drawable/ic_favorite"
            />
        <item
        android:id="@+id/miOrder"
        android:title="@string/order_history"
        android:icon="@drawable/ic_history"
        />
        <item
            android:id="@+id/miFAQ"
            android:title="@string/faq"
            android:icon="@drawable/ic_faq"
            />
        <item
            android:id="@+id/miLogout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_log_out"
            />
    </group>
</menu>