<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rlFoodItems"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtSrNumber"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="4dp"
            android:text="@string/serial_number"
            android:textColor="@color/white_medium"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDishName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dish_name"
                android:padding="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white_high"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/txtCostIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/rupee"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/cost"
                    />

                <TextView
                    android:id="@+id/txtCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/cost_per_person"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:textColor="@color/cost"
                    android:textSize="15sp"
                    />

            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="?attr/colorPrimary"
            android:text="@string/add"
            android:textAllCaps="false"
            android:visibility="visible"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRemove"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:text="@string/remove"
            app:backgroundTint="?attr/colorError"
            app:rippleColor="#1fcf6679"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>