<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/regForm"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">





        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="12dp"
            android:hint="@string/name"
            app:startIconDrawable="@drawable/ic_account_circle"
            app:endIconMode="clear_text"
            app:helperText="@string/name_validation"
            app:helperTextEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tiName"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/ic_email"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tiEmail"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/ic_mobile"
            android:hint="@string/mobile_number"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:prefixText="@string/country_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:maxLines="1"
                android:inputType="phone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tiAddress"
            android:layout_below="@id/tiMobile"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/ic_location"
            android:hint="@string/delivery_address"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tiEtAddress"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tiAddress"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="12dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_password"
            app:endIconMode="password_toggle"
            app:helperTextEnabled="true"
            app:helperText="@string/password_validation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tiPassword"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            app:startIconDrawable="@drawable/ic_password"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tiConfirmPassword"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="40dp"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textStyle="bold"
            />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>