<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OtpActivity"
    android:id="@+id/rlRoot"
    >
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />


    <TextView
        android:id="@+id/otpReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/otp_request"
        android:textColor="?attr/colorOnBackground"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/otpReq"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:startIconDrawable="@drawable/ic_otp"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="4"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tiEtOtp"
            android:maxLines="1"
            android:maxLength="4"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiOtp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_password"
        app:endIconMode="password_toggle"
        app:helperTextEnabled="true"
        app:helperText="@string/password_validation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/confirm_password"
        app:startIconDrawable="@drawable/ic_password"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            />


    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:layout_below="@id/tiConfirmPassword"
        android:textAllCaps="false"
        android:textStyle="bold"
        />




</RelativeLayout>