<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="0dp"
    app:cardCornerRadius="0dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_logo"
            android:textSize="40sp"
            android:textColor="?attr/colorSecondary"
            android:layout_marginHorizontal="5dp"/>

        <TextView
            android:id="@+id/txtDishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_toRightOf="@id/txtLogo"
            android:layout_marginTop="18dp"
            android:textColor="?attr/colorOnSurface"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="17dp"
            android:layout_marginHorizontal="10dp"
            >
            <TextView
                android:id="@+id/txtCostIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingStart="4dp"
                android:text="@string/rupee"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/cost"
                />

            <TextView
                android:id="@+id/txtCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/cost_per_person"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:textColor="@color/cost"
                android:textSize="15sp"
                />

        </LinearLayout>




    </RelativeLayout>



</com.google.android.material.card.MaterialCardView>